--- a/detail/ID_badBackslash.html
+++ b/detail/ID_badBackslash.html
@@ -66,13 +66,14 @@ void bar() {
 
 </main>
 
+<h3>相关</h3>
+<div class="ref-items"><a href="./ID_commentEndingBackslash.html" class="related-link">ID_commentEndingBackslash</a></div>
 
 <h3>依据</h3>
 <div class="ref-items">ISO/IEC 14882:2003 2.1(1)-undefined
 ISO/IEC 14882:2011 2.2(1)-undefined</div>
 
-<h3>参考</h3>
-<div class="ref-items">MISRA C 2012 3.2</div>
+
 </article>
 </div>
 <footer>
