--- a/detail/ID_bufferOverflow.html
+++ b/detail/ID_bufferOverflow.html
@@ -55,7 +55,7 @@ int main() {
 
 <p>缓冲区溢出可造成严重危害，如：</p>
 <ul>
-<li>破坏堆栈或段结构，扰乱程序执行</li>
+<li>破坏堆、栈等进程结构，扰乱程序执行</li>
 <li>改写关键信息，篡改程序行为</li>
 <li>注入并运行恶意代码</li>
 <li>攻击高权限进程获取非法权限</li>
