--- a/detail/ID_for_floatCounter.html
+++ b/detail/ID_for_floatCounter.html
@@ -60,7 +60,8 @@ cout &lt;&lt; n &lt;&lt; &#x27;\n&#x27;;  //<i> Not 1000</i></code></pre>
 </main>
 
 <h3>相关</h3>
-<div class="ref-items"><a href="./ID_illFloatComparison.html" class="related-link">ID_illFloatComparison</a></div>
+<div class="ref-items"><a href="./ID_illFloatComparison.html" class="related-link">ID_illFloatComparison</a>
+<a href="./ID_for_invalidCounter.html" class="related-link">ID_for_invalidCounter</a></div>
 
 
 <h3>参考</h3>
