--- a/detail/ID_incompleteNewDeletePair.html
+++ b/detail/ID_incompleteNewDeletePair.html
@@ -39,7 +39,7 @@
 <main>
 <p>资源的分配和回收方法应在同一库或主程序等可执行模块、类等逻辑模块中提供。</p>
 
-<p>如果一个模块分配的资源需要另一个模块回收，会打破模块之间的独立性，增加维护成本，而且 so、dll、exe 等可执行模块一般都有独立的堆栈，跨模块的分配与回收往往会造成严重错误。</p>
+<p>如果一个模块分配的资源需要另一个模块回收，会打破模块之间的独立性，增加维护成本，而且 so、dll、exe 等可执行模块的资源管理机制可以是相互独立的，跨模块的分配与回收可能会造成严重错误。</p>
 
 <p>示例：</p>
 <pre><code>//<i> In a.dll</i>
@@ -51,9 +51,9 @@ int* foo() {
 void bar() {
     int* p = foo();
     ....
-    free(p);   //<i> Non-compliant, crash</i>
+    free(p);   //<i> Non-compliant, may crash</i>
 }</code></pre>
-<p>例中 a.dll 分配的内存由 b.dll 释放，相当于混淆了不同堆栈中的数据，程序一般会崩溃。</p>
+<p>设例中 a.dll 和 b.dll 用于动态内存管理的数据结构是各自私有的，相关算法也不一样，如果 a.dll 分配的内存被 b.dll 释放，就会造成严重错误。</p>
 
 <p>应改为：</p>
 <pre><code>//<i> In a.dll</i>
