--- a/detail/ID_inconsistentFormatArgType.html
+++ b/detail/ID_inconsistentFormatArgType.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：C 格式化占位符与其对应参数的类型应一致，否则导致标准未定义的行为。" />
+  <meta name="description" content="C/C++ 安全编程要点：C 格式化占位符与其对应参数的类型应一致，否则会导致标准未定义的行为。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>C 格式化占位符与其对应参数的类型应一致，否则导致标准未定义的行为。</p>
+<p>C 格式化占位符与其对应参数的类型应一致，否则会导致标准未定义的行为。</p>
 
 <p>示例：</p>
 <pre><code>size_t n;
