--- a/detail/ID_invalidParamArraySize.html
+++ b/detail/ID_invalidParamArraySize.html
@@ -65,7 +65,8 @@ void foo(int (&amp;a)[n]) {   //<i> Compliant</i>
 </main>
 
 <h3>相关</h3>
-<div class="ref-items"><a href="./ID_inconsistentArraySize.html" class="related-link">ID_inconsistentArraySize</a></div>
+<div class="ref-items"><a href="./ID_inconsistentArraySize.html" class="related-link">ID_inconsistentArraySize</a>
+<a href="./ID_forbidCArray.html" class="related-link">ID_forbidCArray</a></div>
 
 <h3>依据</h3>
 <div class="ref-items">ISO/IEC 9899:1999 6.7.5.3(7)
