--- a/detail/ID_missingParamName.html
+++ b/detail/ID_missingParamName.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">6.5.1 ID_missingParamName</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#declaration.parameter">目录</a> › <a class="rule-toc-link" href="./ID_invalidParamArraySize.html">next</a> › <a class="rule-toc-link" href="./ID_mixedDeclarations.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#declaration.parameter">目录</a> › <a class="rule-toc-link" href="./ID_invalidParamArraySize.html">next</a> › <a class="rule-toc-link" href="./ID_forbidCArray.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
