--- a/detail/ID_mixedDeclarations.html
+++ b/detail/ID_mixedDeclarations.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">6.4.8 ID_mixedDeclarations</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#declaration.declarator">目录</a> › <a class="rule-toc-link" href="./ID_missingParamName.html">next</a> › <a class="rule-toc-link" href="./ID_mixedTypeObjDefinition.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#declaration.declarator">目录</a> › <a class="rule-toc-link" href="./ID_forbidCArray.html">next</a> › <a class="rule-toc-link" href="./ID_mixedTypeObjDefinition.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
