--- a/detail/ID_throwWhileThrowing.html
+++ b/detail/ID_throwWhileThrowing.html
@@ -64,7 +64,8 @@ int main() {
 </main>
 
 <h3>相关</h3>
-<div class="ref-items"><a href="./ID_exceptionInException.html" class="related-link">ID_exceptionInException</a></div>
+<div class="ref-items"><a href="./ID_nonCopiableException.html" class="related-link">ID_nonCopiableException</a>
+<a href="./ID_exceptionInException.html" class="related-link">ID_exceptionInException</a></div>
 
 <h3>依据</h3>
 <div class="ref-items">ISO/IEC 14882:2003 15.1(3)
