--- a/detail/ID_commentEndingBackslash.html
+++ b/detail/ID_commentEndingBackslash.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：nullptr 可被所有接受指针的 catch 子句捕获，使异常处理失去针对性。" />
+  <meta name="description" content="C/C++ 安全编程要点：以反斜杠结尾的单行注释会将下一行也注释掉。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>不应抛出 nullptr - C/C++ 安全规则</title>
+  <title>单行注释不应以反斜杠结尾 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,41 +27,34 @@
 </nav>
 <article>
 <header>
-  <h1>不应抛出 nullptr</h1>
+  <h1>单行注释不应以反斜杠结尾</h1>
   <div id="subtitle">
-    <div id="subtitle-id">7.26 ID_throwNullptr</div>
+    <div id="subtitle-id">3.5.4 ID_commentEndingBackslash</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#exception">目录</a> › <a class="rule-toc-link" href="./ID_crossModuleException.html">next</a> › <a class="rule-toc-link" href="./ID_throwNULL.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#precompile.comment">目录</a> › <a class="rule-toc-link" href="./ID_sourceFileExt.html">next</a> › <a class="rule-toc-link" href="./ID_specialComment.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>nullptr 可被所有接受指针的 catch 子句捕获，使异常处理失去针对性。</p>
+<p>以反斜杠结尾的单行注释会将下一行也注释掉。</p>
 
 <p>示例：</p>
-<pre><code>void foo() {
-    throw nullptr;  //<i> Non-compliant</i>
-}
-
-void bar() {
-    try {
-        foo();
-    } catch (int*) {  //<i> Which handler?</i>
-        ....
-    } catch (char*) {
-        ....
-    }
-}</code></pre>
+<pre><code>#define M   \
+    fun0(); \
+  //<i>fun1(); \   // Non-compliant, use /*fun1();*/ instead</i>
+    fun2();
+</code></pre>
+<p>示例代码的本意是注释掉 fun1()，但由于结尾是反斜杠，fun2() 也被注释掉了。这种问题多出现在以反斜杠实现的多行宏定义中。</p>
 
 </main>
 
 <h3>相关</h3>
-<div class="ref-items"><a href="./ID_throwPointer.html" class="related-link">ID_throwPointer</a></div>
+<div class="ref-items"><a href="./ID_badBackslash.html" class="related-link">ID_badBackslash</a></div>
 
 
 <h3>参考</h3>
-<div class="ref-items">MISRA C++ 2008 15-0-2</div>
+<div class="ref-items">MISRA C 2012 3.2</div>
 </article>
 </div>
 <footer>
