--- a/detail/ID_for_counterChangedInBody.html
+++ b/detail/ID_for_counterChangedInBody.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">9.2.7 ID_for_counterChangedInBody</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.for">目录</a> › <a class="rule-toc-link" href="./ID_for_counterNested.html">next</a> › <a class="rule-toc-link" href="./ID_for_floatCounter.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.for">目录</a> › <a class="rule-toc-link" href="./ID_for_invalidCounter.html">next</a> › <a class="rule-toc-link" href="./ID_for_floatCounter.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
