--- a/detail/ID_for_counterNested.html
+++ b/detail/ID_for_counterNested.html
@@ -29,9 +29,9 @@
 <header>
   <h1>嵌套的 for 语句不应使用相同的循环变量</h1>
   <div id="subtitle">
-    <div id="subtitle-id">9.2.8 ID_for_counterNested</div>
+    <div id="subtitle-id">9.2.9 ID_for_counterNested</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.for">目录</a> › <a class="rule-toc-link" href="./ID_for_brace.html">next</a> › <a class="rule-toc-link" href="./ID_for_counterChangedInBody.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#control.for">目录</a> › <a class="rule-toc-link" href="./ID_for_brace.html">next</a> › <a class="rule-toc-link" href="./ID_for_invalidCounter.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
