--- a/detail/ID_illFloatComparison.html
+++ b/detail/ID_illFloatComparison.html
@@ -56,7 +56,7 @@ if (f == 0.1) {     //<i> Non-compliant, do not use ‘==’ or ‘!=’</i>
 <pre><code>bool feq(float a, float b, float e = 0.000001f) {
     return fabs(a - b) &lt; e;
 }</code></pre>
-<p>利用 feq 函数判断浮点数 a 和 b 是否相等，如果两个浮点数的差值非常小则可以认为相等，其中 fabs 为计算浮点数差值绝对值的函数，如果差值绝对值小于 e 则认为相等，否则不等。</p>
+<p>可以利用 feq 函数判断浮点数 a 和 b 是否相等，如果两个浮点数的差值非常小则可以认为相等，其中 fabs 是计算浮点数差值绝对值的函数，如果差值绝对值小于 e 则认为相等，否则不等。</p>
 <pre><code>if (feq(f, 0.1)) {   //<i> Compliant</i>
     cout &lt;&lt; &quot;OK&quot;;
 }</code></pre>
