--- a/detail/ID_inconsistentFormatArgNum.html
+++ b/detail/ID_inconsistentFormatArgNum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：如果 C 格式化占位符的数量大于参数的数量，会导致标准未定义的行为，反之多余的参数会失去意义，往往意味着逻辑错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：如果参数的数量小于 C 格式化占位符的数量，会导致标准未定义的行为，反之多余的参数会失去意义，往往意味着逻辑错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,13 +37,13 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>如果 C 格式化占位符的数量大于参数的数量，会导致标准未定义的行为，反之多余的参数会失去意义，往往意味着逻辑错误。</p>
+<p>如果参数的数量小于 C 格式化占位符的数量，会导致标准未定义的行为，反之多余的参数会失去意义，往往意味着逻辑错误。</p>
 
 <p>示例：</p>
-<pre><code>void foo(int type, const char* msg) {
-    printf(&quot;Error (type %d): %s\n&quot;, type);  //<i> Non-compliant, undefined behavior</i>
+<pre><code>void log(int type, const char* msg) {
+    printf(&quot;[%d]: %s\n&quot;, type);        //<i> Non-compliant, undefined behavior</i>
 }</code></pre>
-<p>例中格式化字符串需要两个参数，但只传入了一个，往往会引发运行时堆栈错误。</p>
+<p>例中格式化字符串需要两个参数，但只传入了一个，可能会打印出错误的信息，也可能会使程序异常终止。</p>
 
 <p>由于可变参数列表自身的局限，很难在编译时发现这种问题，有些编译器会检查 printf、sprintf 等标准函数，但无法检查自定义函数，建议在 C++ 代码中禁用可变参数列表和 C 风格的格式化函数。</p>
 
