--- a/detail/ID_missingBracedSyntax.html
+++ b/detail/ID_missingBracedSyntax.html
@@ -44,9 +44,10 @@
     float a = x;   //<i> Non-compliant, may loss data</i>
     float b(x);    //<i> Non-compliant, may loss data</i>
     float c{x};    //<i> Compliant, list-initialization, compile-time protected</i>
+    float d{static_cast&lt;float&gt;(x)};   //<i> Compliant, intentional conversion</i>
     ....
 }</code></pre>
-<p>例中 a 和 b 的初始化可能存在数据丢失等问题，c 的初始化无法通过编译，使问题得以及时修正。</p>
+<p>例中 a 和 b 的初始化可能存在数据丢失等问题，c 的初始化无法通过编译，使问题得以及时修正，d 为有意转换，可以通过编译。</p>
 
 <p>在大多数情况下，列表出初始化均可代替等号或小括号初始化，如初始赋值、调用构造函数等：</p>
 <pre><code>struct A {
@@ -63,12 +64,12 @@ A d[]{1, 2};  //<i> Initializate an array</i>
 struct B {
     int i, j;
 };
-B e{};       //<i> Zero-initialization, members are set to 0</i>
-B f{1, 2};   //<i> Members are set to 1 and 2 respectively</i>
+B e{};        //<i> Zero-initialization, members are set to 0</i>
+B f{1, 2};    //<i> Members are set to 1 and 2 respectively</i>
 </code></pre>
 <p>相比于列表初始化，小括号初始化的语法不统一：</p>
-<pre><code>B g();       //<i> This is a function, not an object</i>
-B h = B();   //<i> Zero-initialization, verbose</i></code></pre>
+<pre><code>B g();        //<i> This is a function, not an object</i>
+B h = B();    //<i> Zero-initialization, verbose</i></code></pre>
 <p>注意，例中 B g(); 是函数声明，易与对象定义混淆，改用 B g{}; 可以简练有效的对成员进行零初始化。</p>
 
 <p>列表初始化的大括号及之间的内容称为“初始化列表”，初始化列表之前可以有一个等号，但 = {....} 是拷贝初始化，不带等号才是直接初始化，虽然复制成本可被优化，但仍应避免使用多余的符号。</p>
@@ -76,8 +77,8 @@ B h = B();   //<i> Zero-initialization, verbose</i></code></pre>
     int x;
     explicit C(int i): x{i} {}
 };
-C a{1};     //<i> OK</i>
-C b = {1};  //<i> Compile error</i></code></pre>
+C a{1};      //<i> OK</i>
+C b = {1};   //<i> Compile error</i></code></pre>
 <p>构造函数被 explicit 关键字限定，故无法进行拷贝初始化。</p>
 
 <p>例外：</p>
