--- a/detail/ID_sourceFileExt.html
+++ b/detail/ID_sourceFileExt.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">3.6.1 ID_sourceFileExt</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#precompile.file">目录</a> › <a class="rule-toc-link" href="./ID_includedFileExt.html">next</a> › <a class="rule-toc-link" href="./ID_specialComment.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#precompile.file">目录</a> › <a class="rule-toc-link" href="./ID_includedFileExt.html">next</a> › <a class="rule-toc-link" href="./ID_commentEndingBackslash.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
