--- a/detail/ID_specialComment.html
+++ b/detail/ID_specialComment.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">3.5.3 ID_specialComment</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#precompile.comment">目录</a> › <a class="rule-toc-link" href="./ID_sourceFileExt.html">next</a> › <a class="rule-toc-link" href="./ID_badCommentPosition.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#precompile.comment">目录</a> › <a class="rule-toc-link" href="./ID_commentEndingBackslash.html">next</a> › <a class="rule-toc-link" href="./ID_badCommentPosition.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
