--- a/detail/ID_throwInHash.html
+++ b/detail/ID_throwInHash.html
@@ -31,7 +31,7 @@
   <div id="subtitle">
     <div id="subtitle-id">7.14 ID_throwInHash</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#exception">目录</a> › <a class="rule-toc-link" href="./ID_throwInNoexcept.html">next</a> › <a class="rule-toc-link" href="./ID_exceptionInException.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#exception">目录</a> › <a class="rule-toc-link" href="./ID_nonCopiableException.html">next</a> › <a class="rule-toc-link" href="./ID_exceptionInException.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
