--- a/detail/ID_throwInNoexcept.html
+++ b/detail/ID_throwInNoexcept.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：由 noexcept 标记的函数产生未被处理的异常属于逻辑错误，会引发 std::terminate 函数的执行，使程序异常终止。" />
+  <meta name="description" content="C/C++ 安全编程要点：由 noexcept 关键字标注的函数不会抛出异常，如果存在未被处理的异常会引发 std::terminate 函数的执行，使程序异常终止。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>由 noexcept 标记的函数不可产生未处理的异常 - C/C++ 安全规则</title>
+  <title>由 noexcept 关键字标注的函数不可产生未处理的异常 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,17 +27,17 @@
 </nav>
 <article>
 <header>
-  <h1>由 noexcept 标记的函数不可产生未处理的异常</h1>
+  <h1>由 noexcept 关键字标注的函数不可产生未处理的异常</h1>
   <div id="subtitle">
-    <div id="subtitle-id">7.15 ID_throwInNoexcept</div>
+    <div id="subtitle-id">7.17 ID_throwInNoexcept</div>
     <div id="subtitle-tags">
-      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#exception">目录</a> › <a class="rule-toc-link" href="./ID_diamondExceptionInheritance.html">next</a> › <a class="rule-toc-link" href="./ID_throwInHash.html">previous</a>
+      <svg class="icon" aria-hidden="true"><use xlink:href="#icon-standard"></use></svg><a class="rule-toc-link" href="../index.html#exception">目录</a> › <a class="rule-toc-link" href="./ID_diamondExceptionInheritance.html">next</a> › <a class="rule-toc-link" href="./ID_missingNoexcept.html">previous</a>
     </div>
   </div>
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>由 noexcept 标记的函数产生未被处理的异常属于逻辑错误，会引发 std::terminate 函数的执行，使程序异常终止。</p>
+<p>由 noexcept 关键字标注的函数不会抛出异常，如果存在未被处理的异常会引发 std::terminate 函数的执行，使程序异常终止。</p>
 
 <p>程序异常终止所产生的问题可参见 <a href="./ID_uncaughtException.html" class="dashed-link">ID_uncaughtException</a> 的进一步讨论。</p>
 
@@ -56,7 +56,8 @@
 </main>
 
 <h3>相关</h3>
-<div class="ref-items"><a href="./ID_uncaughtException.html" class="related-link">ID_uncaughtException</a></div>
+<div class="ref-items"><a href="./ID_uncaughtException.html" class="related-link">ID_uncaughtException</a>
+<a href="./ID_missingNoexcept.html" class="related-link">ID_missingNoexcept</a></div>
 
 <h3>依据</h3>
 <div class="ref-items">ISO/IEC 14882:2011 15.4(9)
