--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
   <li><a href="./detail/ID_illMemberCall.html">基类对象构造完毕之前不可调用成员函数</a></li>
   <li><a href="./detail/ID_illMemberAccess.html">在面向构造或析构函数体的 catch 子句中不可访问非静态成员</a></li>
   <li><a href="./detail/ID_disorderedInitialization.html">成员初始化应遵循声明的顺序</a></li>
-  <li><a href="./detail/ID_virtualCallInConstructor.html">在构造函数中不应使用动态类型</a></li>
-  <li><a href="./detail/ID_virtualCallInDestructor.html">在析构函数中不应使用动态类型</a></li>
+  <li><a href="./detail/ID_virtualCallInConstructor.html">在对象的构造函数中不应使用其动态类型</a></li>
+  <li><a href="./detail/ID_virtualCallInDestructor.html">在对象的析构函数中不应使用其动态类型</a></li>
   <li><a href="./detail/ID_exitCallInDestructor.html">避免在析构函数中调用 exit 函数</a></li>
   <li><a href="./detail/ID_sideEffectCopyConstructor.html">避免在拷贝构造函数中实现复制之外的功能</a></li>
   <li><a href="./detail/ID_sideEffectMoveConstructor.html">避免在移动构造函数中实现数据移动之外的功能</a></li>
