--- a/detail/ID_this_zeroComparison.html
+++ b/detail/ID_this_zeroComparison.html
@@ -39,7 +39,7 @@
 <main>
 <p>正常情况下 this 指针不会为空，而且判断 this 指针是否为空会影响编译器对 this 指针的优化，造成难以预料的后果。</p>
 
-<p>在某些环境中通过空指针调用非静态成员函数时，this 指针可能为空，但这并不符合标准。对于内建类型，表达式 E1-&gt;E2 与 (*E1).E2 等价，通过空指针访问非静态成员所导致的行为均是未定义的。值得强调的是，任何情况下都不应逃避解引用空指针造成的问题。</p>
+<p>在某些环境中通过空指针调用非静态成员函数时，this 指针可能为空，但这并不是语言标准规定的，通过空指针访问对象成员所导致的行为均是未定义的。值得强调的是，任何情况下都不应逃避解引用空指针造成的问题。</p>
 
 <p>示例：</p>
 <pre><code>struct A {
@@ -51,12 +51,13 @@
 
 A* p = foo();
 //<i> Suppose an error has occurred and a null pointer is returned</i>
-cout &lt;&lt; p-&gt;getX() &lt;&lt; &#x27;\n&#x27;;
-</code></pre>
-<p>假设 foo 函数不应返回空指针，而某个错误导致其返回了空指针，程序本应崩溃，而 getX 函数却逃避了崩溃，这非但不能真正地解决问题，反而使问题难以定位，使程序难以调试，大大降低了可维护性。</p>
+cout &lt;&lt; p-&gt;getX() &lt;&lt; &#x27;\n&#x27;;</code></pre>
+<p>假设 foo 函数不应返回空指针，而某个错误导致其返回了空指针，程序本应崩溃，而 getX 函数可能会逃避崩溃，非但不能真正地解决问题，反而使问题难以定位，使程序难以调试，大大降低了可维护性。</p>
 
 </main>
 
+<h3>相关</h3>
+<div class="ref-items"><a href="./ID_nullDerefInScp.html" class="related-link">ID_nullDerefInScp</a></div>
 
 
 <h3>参考</h3>
