--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <li><a href="./detail/ID_uselessQualifier.html">声明枚举类型的底层类型时不应使用 const 或 volatile</a></li>
   <li><a href="./detail/ID_constLiteralReference.html">对常量的定义不应为引用</a></li>
   <li><a href="./detail/ID_forbidRestrictPtr.html">禁用 restrict 指针</a></li>
-  <li><a href="./detail/ID_forbidVolatile.html">非适当场景禁用 volatile</a></li>
+  <li><a href="./detail/ID_forbidVolatile.html">非适当场景禁用 volatile 关键字</a></li>
   <li><a href="./detail/ID_nonConstUnmodified.html">相关对象未被修改时应使用 const 声明</a></li>
 </ol></li>
 <li id="declaration.specifier" class="rules-toc-section">Specifier<ol>
