--- a/detail/ID_dynamicInitialization.html
+++ b/detail/ID_dynamicInitialization.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：动态创建的对象在初始化前具有不确定的值，读取未初始化的对象会导致标准未定义的行为。" />
+  <meta name="description" content="C/C++ 安全编程要点：通过 malloc、new 等方式动态创建的对象在初始化前具有不确定的值，读取未初始化的对象会导致标准未定义的行为。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,19 +37,17 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>动态创建的对象在初始化前具有不确定的值，读取未初始化的对象会导致标准未定义的行为。</p>
-
-<p>动态创建的对象即通过 malloc、new 等方式创建的对象，如果不指定初始值，动态创建的基本变量的值是不确定的，当这种基本变量作为类成员或数组元素时，问题同样存在。如果类对象或数组含有不确定的值，其整体状态也是不确定的，所以应在构造函数或初始化列表中妥善初始化各成员或元素的值。</p>
+<p>通过 malloc、new 等方式动态创建的对象在初始化前具有不确定的值，读取未初始化的对象会导致标准未定义的行为。</p>
 
 <p>示例：</p>
 <pre><code>int* a = new int[2];
-use(a[0], a[1]);     //<i> Non-compliant</i>
+use(a[0] + a[1]);     //<i> Non-compliant</i>
 
 struct A {
     int x, y;
 };
 A* b = new A;
-use(b-&gt;x, b-&gt;y);     //<i> Non-compliant</i>
+use(b-&gt;x * b-&gt;y);     //<i> Non-compliant</i>
 </code></pre>
 <p>建议在创建处初始化：</p>
 <pre><code>int* a = new int[2]();  //<i> Zero-initialization, all elements are 0</i>
