--- a/detail/ID_forbidVolatile.html
+++ b/detail/ID_forbidVolatile.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：应在适当的场景中合理使用 volatile，否则会导致优化或同步相关的多种问题。" />
+  <meta name="description" content="C/C++ 安全编程要点：应在适当的场景中合理使用 volatile 关键字，否则会导致优化或同步相关的多种问题。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>非适当场景禁用 volatile - C/C++ 安全规则</title>
+  <title>非适当场景禁用 volatile 关键字 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>非适当场景禁用 volatile</h1>
+  <h1>非适当场景禁用 volatile 关键字</h1>
   <div id="subtitle">
     <div id="subtitle-id">6.2.10 ID_forbidVolatile</div>
     <div id="subtitle-tags">
@@ -37,9 +37,9 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>应在适当的场景中合理使用 volatile，否则会导致优化或同步相关的多种问题。</p>
+<p>应在适当的场景中合理使用 volatile 关键字，否则会导致优化或同步相关的多种问题。</p>
 
-<p>下列场景可使用 volatile：</p>
+<p>在下列场景中可使用 volatile 关键字：</p>
 <ul>
 <li>对象读写对应外设 IO</li>
 <li>与信号等中断处理过程共享对象</li>
@@ -48,18 +48,28 @@
 <li>在 C/C++ 之外，通过与编译优化不兼容的方式访问对象</li>
 
 </ul>
-<p>在这些场景中，如果相关对象没有用 volatile 限定会导致程序和预期不符，volatile 关键字可以保证对象具有稳定的内存地址，任何读取或写入都可以来源于或作用于内存中的实际数据。</p>
+<p>在这些场景中，如果相关对象没有用 volatile 关键字限定会导致程序和预期不符，volatile 关键字可以保证对象具有稳定的内存地址，任何读取或写入都可以来源于或作用于内存中的实际数据。</p>
 
-<p>除此之外不应使用 volatile，不参与过程间跳转的局部 volatile 对象往往意味着 volatile 的滥用，审计工具不妨重点关注这种对象，而且要注意 volatile 和 C/C++ 的并发或同步机制没有直接关系，也无法保证相关操作的原子性。</p>
+<p>除此之外不应使用 volatile 关键字，不参与过程间跳转的局部 volatile 对象往往意味着 volatile 关键字的滥用。</p>
 
 <p>示例：</p>
-<pre><code>volatile int x;  //<i> Non-compliant, ‘volatile’ is abused</i>
+<pre><code>volatile int foo();        //<i> Non-compliant</i>
+int bar(volatile int x);   //<i> Non-compliant</i>
+
+int baz() {
+    volatile int i = 0;    //<i> Non-compliant</i>
+    return i;
+}</code></pre>
+<p>例中用于限定返回值对象、参数对象和局部对象的 volatile 关键字是没有实际意义的。</p>
+
+<p>而且要注意 volatile 关键字和 C/C++ 的并发或同步机制没有直接关系，也无法保证相关操作的原子性，如：</p>
+<pre><code>volatile int x;   //<i> ‘volatile’ is nothing to do with synchronization</i>
 
 void thd() {
     LockGuard g;
-    read_and_write(x);
+    read_and_write(x);   //<i> The ‘volatile’ on ‘x’ is abused</i>
 }</code></pre>
-<p>例中 x 是不涉及外设的共享对象，thd 是线程函数，LockGuard 是某种 RAII 锁，在已落实同步机制的情况下，不应再使用 volatile。</p>
+<p>例中 x 是不涉及外设的共享对象，thd 是线程函数，LockGuard 是某种 RAII 锁，在已落实同步机制的情况下，不应再使用 volatile 关键字。</p>
 
 </main>
 
