--- a/detail/ID_if_identicalElseIfBlock.html
+++ b/detail/ID_if_identicalElseIfBlock.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：内容完全相同的分枝是没有意义的，也可能是由复制粘贴造成的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：完全相同的分枝是没有意义的，也可能是由复制粘贴造成的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
