--- a/detail/ID_localInitialization.html
+++ b/detail/ID_localInitialization.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：未初始化的局部对象具有不确定的值，读取未初始化的对象会导致标准未定义的行为。" />
+  <meta name="description" content="C/C++ 安全编程要点：在函数作用域内定义，不受 static、extern、local_thread 等关键字限定的对象简称局部对象，未初始化的局部对象具有不确定的值，读取未初始化的对象会导致标准未定义的行为。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
@@ -37,27 +37,23 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>未初始化的局部对象具有不确定的值，读取未初始化的对象会导致标准未定义的行为。</p>
-
-<p>在函数作用域内定义的，具有“<a href="https://en.cppreference.com/w/cpp/language/storage_duration#Automatic_storage_duration" target="_blank" class="dashed-link">自动存储期（automatic storage duration）</a>”的对象简称局部对象，具有“<a href="https://en.cppreference.com/w/cpp/named_req/ScalarType" target="_blank" class="dashed-link">标量类型（scalar type）</a>”的对象简称基本变量，如果不明确指定初始值，局部基本变量的初始值是不确定的。</p>
-
-<p>当局部基本变量作为类成员或数组元素时，这个问题同样存在，如果类对象或数组含有不确定的值，其整体状态也是不确定的，所以应在构造函数或初始化列表中妥善初始化各成员或元素的值。</p>
+<p>在函数作用域内定义，不受 static、extern、local_thread 等关键字限定的对象简称局部对象，未初始化的局部对象具有不确定的值，读取未初始化的对象会导致标准未定义的行为。</p>
 
 <p>示例：</p>
 <pre><code>int foo() {
-    int a;         //<i> A local object(automatic storage duration)</i>
+    int a;        //<i> A local object(automatic storage duration)</i>
     if (cond) {
         a = 0;
     }
-    return a;      //<i> Non-compliant, may be an indeterminate value</i>
+    return a;     //<i> Non-compliant, may be an indeterminate value</i>
 }</code></pre>
-<p>例中局部对象 a 的初始化依赖某种条件，在条件范围之外读取 a 的值会得到不确定的结果。</p>
+<p>当例中条件 cond 为假时，局部对象 a 的值是不确定的。</p>
 
-<p>建议对象在声明处初始化，即使不方便在声明处初始化，也应该在声明的附近进行无条件初始化：</p>
-<pre><code>int a = 0;    //<i> Good</i>
+<p>建议对象在声明处初始化，即使不方便在声明处初始化，也应该在声明的附近设定对象的值：</p>
+<pre><code>int a = 0;   //<i> Good</i>
 
 int b;
-b = 123;      //<i> OK</i>
+b = 123;     //<i> OK</i>
 </code></pre>
 <p>不建议的方式：</p>
 <pre><code>int a;
@@ -68,7 +64,7 @@ if (x) {
 if (y) {
     use(a);   //<i> Dangerous</i>
 }</code></pre>
-<p>例中 a 的初始化依赖条件 x，并在满足条件 y 时被使用，即使条件 x 和条件 y 有一定相关性可以保证对 a 的使用是正确的，也会造成潜在的维护困难，当条件比较复杂或有变化时极易出错。</p>
+<p>例中 a 是否被初始化依赖条件 x，并在满足条件 y 时被使用，即使条件 x 和条件 y 有一定相关性可以保证对 a 的使用是正确的，也会造成潜在的维护困难，当条件比较复杂或有变化时极易出错。</p>
 
 </main>
 
