--- a/detail/ID_macro_typeid.html
+++ b/detail/ID_macro_typeid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：宏用于文本处理，不受作用域等语言规则限制，不应使用宏实现类型等语言层面的概念。" />
+  <meta name="description" content="C/C++ 安全编程要点：宏用于文本处理，不受语言规则限制，不应使用宏实现类型等语言层面的概念。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
