--- a/detail/ID_nestedComment.html
+++ b/detail/ID_nestedComment.html
@@ -42,10 +42,10 @@
 <p>示例：</p>
 
 <pre><code>/*                         //<i> #1</i>
-    /*                     //<i> #2, Non-compliant</i>
+    /*                     //<i> #2, non-compliant</i>
     nested comments
      */                    //<i> #3</i>
-*/                         //<i> #4, Non-compliant</i>
+*/                         //<i> #4, non-compliant</i>
 </code></pre>
 <p>例中 #1 处的 /* 与 #3 处的 */ 匹配，而 #4 处的 */ 处于失配状态。</p>
 
