--- a/detail/ID_referInvalidTmpObject.html
+++ b/detail/ID_referInvalidTmpObject.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：可以通过将临时对象与引用绑定的方式延长临时对象的生命周期，但并不是在所有情况下都有效，应避免生命周期与预期不符造成的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：将临时对象与引用绑定可以延长临时对象的生命周期，但并不是在所有情况下都有效，应避免生命周期与预期不符造成的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
