--- a/detail/ID_sig_illReturn.html
+++ b/detail/ID_sig_illReturn.html
@@ -69,7 +69,7 @@ void handler(int x) {
 int main() {
     signal(SIGFPE, handler);
     if (sigsetjmp(buf, 1)) {
-        ....                   //<i> #1, Normal procedure</i>
+        ....                   //<i> #1, normal procedure</i>
         return 0;              //<i> Normal exit</i>
     } else {
         ....                   //<i> #2, handle error</i>
