--- a/detail/ID_switch_invalidStatement.html
+++ b/detail/ID_switch_invalidStatement.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：switch 语句中任何子句都应从属于某个 case 或 default 分枝，否则不会被执行。" />
+  <meta name="description" content="C/C++ 安全编程要点：switch 语句的所有子句都应从属于某个 case 或 default 分枝，否则不会被执行。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
